Fix trouble with scroll in portrait

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -27,5 +27,5 @@
 // elements (general components for all views)
 @import 'elements';
 
-// landing-pampers
+// landing-pampers (main for page landing pampers)
 @import 'landing-pampers';
