--- a/assets/sass/_landing-pampers.scss
+++ b/assets/sass/_landing-pampers.scss
@@ -177,10 +177,6 @@ body {
 }
 
 .landing-pampers-pattern {
-
-	// TEMP
-	display: none;
-
 	width: 120vw;
 	height: 110px;
 	background-size: 360px;
@@ -566,13 +562,10 @@ body {
 	margin-top: 100px;
 	padding: 50px 0;
 	position: relative;
+	overflow: hidden;
 
 	&::after,
 	&::before {
-
-		// TEMP
-		display: none;
-
 		content: '';
 		width: 100%;
 		height: 40px;
@@ -750,11 +743,8 @@ body {
 	position: relative;
 	margin-top: 30px;
 	line-height: 0;
+	overflow: hidden;
 	&::before {
-
-		// TEMP
-		display: none;
-
 		content: '';
 		width: 100%;
 		height: 30px;
